targetHtml/css/main.css
@charset "UTF-8";

/* 
	Reset
	Structural
		Wrapper, Main Div
		Master Headers
		Footer
		Media Queries
	Content
		Headers
		Text
		Images
		Code
		Tables
	Miscelanneous
*/

/* import Arvo from Google Fonts */
@import url(https://fonts.googleapis.com/css?family=Arvo:400,700,400italic);

/* MeyerWeb Reset */
html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font: inherit;
	vertical-align: baseline;
}
body {
	padding: 10px 50px 0 0;
	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
	font-size: 14px;
	color: #232323;
	background-color: #FBFAF7;
	margin: 0;
	line-height: 1.8em;
	-webkit-font-smoothing: antialiased;
}

/************* Wrapper *********************************/
.wrapper {
	width: 960px;
}

/******* Main Div ******************************************************/

#main {
	border-top: 0;
	/* TODO there is a few window-widths that enable horizontal scrolling when images are 650 px */
	/* consider make the maximum width lower and prevent scrolling for more widths */
	width: 650px;
	float: right;
	padding-bottom: 50px;
	margin-top: 0;
}
/*************** Master Header ********************/
.masterHeader {
	background-color: #171717;
	float: left;
	position: fixed;
	border: 1px solid #000;
	border-top-right-radius: 4px;
	border-bottom-right-radius: 4px;
	padding: 34px 40px 22px 50px;
	margin: 30px 25px 0 0;
	-webkit-font-smoothing: antialiased;
}
.masterHeader h1, .masterHeader h2, .masterHeader a {
	color: #FFFFFF;
}
.masterHeader h2 {
	font-size: 12px;
	border-bottom: 0;
}
.masterHeader h1 {
	font-family: Arvo, sans-serif;
	font-size: 30px;
	font-weight: 300;
	line-height: 1.3em;
	border-bottom: 0;
	margin-top: 0;
	border-top: 0;
}

/* Master Header: the black heading with nav buttons and site title */
/* TODO fix invalid .masterHead > ul > a > li markup */
.masterHeader > ul {
	list-style: none;
	padding: 0;
}
.masterHeader li {
	list-style-type: none;
	padding-left: 0;
}
.navButton {
	font-weight: normal;	
	line-height: 1em;
	
	display: block;
	width: 152px;
	height: 15px;
	padding: 6px 6px 6px 7px;
	margin-bottom: 12px;
	
	background: #AF0011;
	background: linear-gradient(top, #AF0011 0%,#820011 100%);
	background: -moz-linear-gradient(top, #AF0011 0%, #820011 100%);
	background: -webkit-gradient(linear, top, bottom, color-stop(0%,#AF0011), color-stop(100%,#820011));
	background: -webkit-linear-gradient(top, #AF0011 0%,#820011 100%);
	background: -o-linear-gradient(top, #AF0011 0%,#820011 100%);
	background: -ms-linear-gradient(top, #AF0011 0%,#820011 100%);
	
	border-radius: 4px;
	border: 1px solid #0D0D0D;
}
.navButton:hover {
	background: #C3001D;
	background: linear-gradient(top, #C3001D 0%,#950119 100%);
	text-decoration: none;
}
/**** Resume Page Header **************************************************/

/* the header on personal/resume page has less nav buttons */
#resumeMasterHeader {
	padding: 34px 25px 22px 50px;
}
#resumeMasterHeader .navButton {
	padding: 2px 2px 2px 22px;
}
#resumeMasterHeader li {
	width: 152px;
	height: 15px;
	padding: 6px 6px 6px 7px;
	margin-bottom: 12px;
	background: #AF0011;
	background: linear-gradient(top, #AF0011 0%,#820011 100%);
	background: -moz-linear-gradient(top, #AF0011 0%, #820011 100%);
	background: -webkit-gradient(linear, top, bottom, color-stop(0%,#AF0011), color-stop(100%,#820011));
	background: -webkit-linear-gradient(top, #AF0011 0%,#820011 100%);
	background: -o-linear-gradient(top, #AF0011 0%,#820011 100%);
	background: -ms-linear-gradient(top, #AF0011 0%,#820011 100%);
	border-radius: 4px;
	border: 1px solid #0D0D0D;
}
#resumeMasterHeader .navButton {
	border: 0;
	width: auto;
}
#linkedin {
    background: url(../img/arrow-down.png) no-repeat 1px;
}
#github {
    background: url(../img/octocat-small.png) no-repeat 1px;
}
#bitbucket {
    background: url(../img/bitbucket_icon.png) no-repeat 1px;
}
#blogLink:hover {
	background: transparent;
}
#blogLink {
	background: transparent;
}

/************ Footer **********************************/
footer {
	width: 170px;
	float: left;
	position: fixed;
	bottom: 10px;
	padding-left: 50px;
}
footer > p {
	font-size: 8pt;
	margin: 0;
}
footer > p.tiny {
	font-size: 6pt;
}

/************************* Media Queries ******************************/
 
/* regular width, but really short window: fix footer overlapping header */
@media screen and (max-height: 480px) and (min-width: 960px) {
	
	footer.fiveNavButtons {
		display: none;
	}
}
/* TODO find optimal footer cut-off height for all navigation button counts */
@media screen and (max-height: 390px) and (min-width: 960px) {

	footer.threeNavButtons {
		display: none;
	}
}


/* classic computer screen size (1024x768) and old iphones: */
/* header at the top, footer at the bottom, content in between */
@media screen and (max-width: 960px) {

	.wrapper {
		width: auto;
		margin: 0;
	}

	.masterHeader, #main, footer {
		float: none;
		position: static;
		width: auto;
	}

	.masterHeader {
		padding-right: 320px;
		margin-top: 0;
	}

	.masterHeader > ul {
		position: absolute;
		right: 130px;
		top: 44px;
	}
	
	/* TODO determine optimal minimum height for .masterHeader for other button counts */
	.masterHeader.threeNavButtons {
		min-height: 115px;
	}
	.masterHeader.fiveNavButtons {
		min-height: 200px;
	}

	#main {
		padding: 20px 84px 20px 50px;
		margin: 0 0 20px;
	}

	footer {
		border-top: 1px solid #ccc;
		margin: 0 84px 0 50px;
		padding: 0;
	}
}

/* TODO images at 650px stretch the page out to 650 px 
requiring horizontal scrolling on smaller devices */

/* small and medium phones: use vertical layout */
@media screen and (max-width: 720px) {
	
	.masterHeader {
		padding: 10px 20px 0;
		margin-right: 0;
		margin-top: 0;
	}

	#main {
		padding: 10px 0 10px 20px;
		margin: 0 0 30px;
	}

	footer {
		margin: 0 0 0 30px;
	}

	header.masterHeader ul, header.masterHeader p.view {
		position: static;
	}
}

/* for PrintPreview and actual paper prints */
@media print {
	
	body {
		color: #000000 !important;
		background-color: #FFFFFF !important;
		border: 0 !important;
		margin: 0 !important;
		padding: 0 !important;
	}
	.masterHeader, footer {
		display: none;
	}
}
/***************** Headers *****************************/
h1, h2, h3, h4, h5, h6 {
	color: #232323;
	margin: 24px 0 10px;
}
h1, h2, h3 {
	font-family: Arvo, Monaco, serif;
	line-height: 1.3;
	font-weight: normal;
}
h1, h2, h3 {
	display: block;
	border-bottom: 1px solid #CCCCCC;
	padding-bottom: 5px;
}
h1 {
	font-size: 24px;
}
h2 {
	font-size: 18px;
}
h3 {
	font-size: 16px;
}
h4, h5, h6 {
	font-family: Arvo, Monaco, serif;
	font-weight: 700;
	font-size:14px;
}
/*********** Text Elements **************/
p, ul, ol, table, dl {
	margin: 0 0 14px;
}
a {
	color: #000099;
	font-weight: 200;
	text-decoration: none;
}
a:hover {
	text-decoration: underline;
}
a > small {
	font-size: 12px;
}
em {
	font-style: italic;
}
strong {
	font-weight: 700;
}
ul > li {
	list-style: inside;
	padding-left: 25px;
}
li {
	list-style: decimal inside;
	padding-left: 20px;
}
blockquote {
	margin: 0;
	padding: 0 0 0 20px;
	font-style: italic;
}
hr {
	border: 0;
	background: #ccc;
	height: 1px;
	margin: 0 0 24px;
}
sub {
	vertical-align: sub;
	font-size: smaller;
}
.quote {
	font-style: italic;
}

/******************* Images ******************/
img {
	position: relative;
	margin: 0 auto;
	width: auto;
	height: auto;
	max-width: 650px;
	padding: 5px;
	margin: 10px 0 0px 0;
	border: 1px solid #ccc;
}
/* TODO revise this */
img + figcaption {
	margin: 0 0 32px 0;
	font-style:italic;
}

/*********** Code blocks ************************/
/* TODO revise class names, hierarchy, purpose */
code, pre {
	font-family: Monaco, Terminal, monospace;
	color: #000;
	font-size: 14px;
	word-break: break-all;
	/* IE hack to 'gain layout' and apply word-break */
	float: left;
}
pre {
	padding: 4px 12px;
	background: #FDFEFB;
	border-radius: 4px;
	border: 1px solid #D7D8C8;
	overflow: auto;
	overflow-y: hidden;
	margin-bottom: 32px;
}
.minified {
	font-size: 12px;
	word-break: break-all;
}
/* psuedo code */
.pseudoDeclaration {
	font-weight: bold;
}
.pseudoCodeIndent1 {
	padding-left: 2em;
}
.var {
	font-style: italic;
	font-weight: bold;
}
.function {
	font-weight: bold;
	font-style: normal;
}

/***************** Tables *********************/
table {
	width: 100%;
	border: 1px solid #CCCCCC;
	margin-bottom: 32px;
	text-align: left;
}
table > caption {
	font-style:italic;
}
th {
	font-family: 'Arvo', Helvetica, Arial, sans-serif;
	font-weight: normal;
}
/* Data Tables */
.dataTable th {
	font-size: 14px;
	padding: 5px;
	background: #F0F0F0;
}
.dataTable td {
	padding: 5px;
	background: #EDEDED;
}
.dataTable tbody {
	border: 1px solid #FF0000;
}

/* Big Loud Tables */
.bigTable th {
	font-size: 16px;
	padding: 10px;
	background: #232323;
	color: #FDFEFB;
}
.bigTable td {
	padding: 10px;
	background: #ccc;
}

/******* banner to inform IE users to upgrade ***********/
.chromeframe {
	margin: 0.2em 0;
	background: #CCCCCC;
	color: #000000;
	padding: 0.2em 0;
}

